[package]
name = "freezebuster"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_ProcessStatus", ]}
windows-service = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"